fix: normal letter spacing for form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -225,6 +225,7 @@ padding-bottom: 1rem;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     max-width: 400px;
+    letter-spacing: normal;
 }
 
 label, legend {
